Row Overflow bug fixed

--- a/client/src/css/headerfooter.css
+++ b/client/src/css/headerfooter.css
@@ -9,7 +9,7 @@
   margin-left: 10px;
 }
 
-.add-footer-height{
+.add-footer{
   background-color: #1E4D2B;
 }
 
@@ -17,7 +17,7 @@
   width: 290px; /* you can use % */
   height: auto;
   float: right;
-  margin-right: 10px;
+  padding-right: 6px;
 }
 
 /* General Header Styles */
